# ChangeLog for media-tv/gnome-dvb-daemon
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gnome-dvb-daemon-0.1.23 (20 Feb 2011)

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.23.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.22 (20 Feb 2011)

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.22.ebuild:
  Version bump.
 
  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
  gnome-dvb-daemon-0.1.14.ebuild:
  Fix python.eclass usage

*gnome-dvb-daemon-0.1.17 (14 Apr 2010)

  14 Apr 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.17.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.16 (18 Mrz 2010)

  18 Mrz 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.16.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.15 (23 Feb 2010)

  23 Feb 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.15.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.14 (24 Dec 2009)

  24 Dec 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.14.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.13 (19 Nov 2009)

  19 Nov 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.13.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.12 (14 Oct 2009)

  14 Oct 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.12.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.11 (6 Oct 2009)

  6 Oct 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.11.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.10 (4 Oct 2009)

  4 Oct 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.10.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.9 (4 Oct 2009)

  4 Oct 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.9.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.8.1 (9 Aug 2009)
