@@ -1,4 +1,4 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -14,9 +14,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="
-	
-	>=dev-libs/glib-2.16
+RDEPEND=">=dev-libs/glib-2.16
 	>=dev-libs/dbus-glib-0.74
 	>=dev-libs/libgee-0.1.4
 	>=dev-db/sqlite-3.4
